--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,34 @@ services:
       - dbautochef
       - redisautochef
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"   # Port untuk API
+      - "9001:9001"   # Port untuk Web Console
+    environment:
+      MINIO_ROOT_USER: autochef123.
+      MINIO_ROOT_PASSWORD: autochef123.
+    volumes:
+      - minio_data:/data
+    networks:
+      - autochefnetwork
+    command: server /data --console-address ":9001"
+
+  createbuckets:
+    image: minio/mc
+    container_name: mc
+    depends_on:
+      - minio
+    networks:
+      - autochefnetwork
+    entrypoint: >
+      /bin/sh -c "
+      until (/usr/bin/mc alias set myminio http://minio:9000 minioadmin minioadmin) do sleep 1; done;
+      /usr/bin/mc mb myminio/autochef-recipe-images;
+      /usr/bin/mc anonymous set download myminio/autochef-recipe-images;"
+
   dbautochef:
     image: postgres:latest
     container_name: autochefdbcon
@@ -48,3 +76,4 @@ networks:
 
 volumes:
   db_data:
+  minio_data:
