--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,17 +4,32 @@ server {
     root /var/www/public;
     index index.php index.html;
 
+    # Semua request diarahkan ke index.php jika tidak ada static yang cocok.
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Tangani request PHP — jangan periksa file secara lokal di container nginx
     location ~ \.php$ {
-        try_files $uri =404;
+        # Jangan pakai try_files di sini (ini yang menyebabkan 404)
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass backendautochef:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+        # Pastikan path ini sesuai dengan path di dalam container backend
+        fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+
+        # Optional: set timeout lebih besar jika diperlukan
+        fastcgi_read_timeout 300;
     }
+
+    location ~ /\.ht {
+        deny all;
+    }
+
+    # Optional: small security headers (bisa ditambah jika mau)
+    # add_header X-Frame-Options "SAMEORIGIN";
+    # add_header X-Content-Type-Options "nosniff";
 }
