--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,23 +17,36 @@ services:
     image: autochef-app:latest
     container_name: backendautochef
     volumes:
-      - /var/www/vendor
-      - ./src:/var/www
+      - ./src:/var/www              # <== KEMBALI seperti sebelumnya
+      - /var/www/vendor             # <== vendor tidak hilang
+    expose:
+      - "9000"
     networks:
       - autochefnetwork
     depends_on:
       - dbautochef
       - redisautochef
 
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: cloudflared-autochef
+    restart: unless-stopped
+    command: >
+      tunnel run --token eyJhIjoiNGFlMDkwMDliNzEyODIzMzA1Y2YxNmUxYjA5YmQ3YTYiLCJ0IjoiNGY3OGI0MjgtZDJkZi00YjY1LTlmODYtMGZjYjZlYzU5NzdhIiwicyI6IlpUbGhOR0prWW1JdE5qSTRaQzAwWXpRMExUazRNVGt0WXpOak0yUmxPRGhoT1RRMCJ9
+    networks:
+      - autochefnetwork
+    depends_on:
+      - nginxautochef
+
   minio:
     image: minio/minio:latest
     container_name: minio
     ports:
-      - "9000:9000"   # Port untuk API
-      - "9001:9001"   # Port untuk Web Console
+      - "9000:9000"
+      - "9001:9001"
     environment:
-      MINIO_ROOT_USER: autochef123.
-      MINIO_ROOT_PASSWORD: autochef123.
+      MINIO_ROOT_USER: "autochef123."
+      MINIO_ROOT_PASSWORD: "autochef123."
     volumes:
       - minio_data:/data
     networks:
@@ -49,18 +62,19 @@ services:
       - autochefnetwork
     entrypoint: >
       /bin/sh -c "
-      until (/usr/bin/mc alias set myminio http://minio:9000 autochef123. autochef123.) do sleep 1; done;
-      /usr/bin/mc mb myminio/autochef-recipe-images;
-      /usr/bin/mc anonymous set public myminio/autochef-recipe-images;
-      exit 0;"
+        until (/usr/bin/mc alias set myminio http://minio:9000 autochef123. autochef123.) do sleep 1; done;
+        /usr/bin/mc mb myminio/autochef-recipe-images;
+        /usr/bin/mc anonymous set public myminio/autochef-recipe-images;
+        exit 0;
+      "
 
   dbautochef:
-    image: postgres:17
+    image: postgres:latest
     container_name: autochefdbcon
     environment:
-      POSTGRES_USER: autochef
-      POSTGRES_PASSWORD: autochef123.
-      POSTGRES_DB: autochefdb
+      POSTGRES_USER: "autochef"
+      POSTGRES_PASSWORD: "autochef123."
+      POSTGRES_DB: "autochefdb"
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
